--- a/App/Tpl/Gys/index.html
+++ b/App/Tpl/Gys/index.html
@@ -1,2 +1,3 @@
-
-            <h1 style="position: absolute;">供应商审核</h1>
+<include file="Public:common" />
+<table id="bt_user_grid"></table>
+<html:script pack="BT.USER" src="/modual/gys.js"/>
