--- a/App/Tpl/Product/index.html
+++ b/App/Tpl/Product/index.html
@@ -1,3 +1,3 @@
-
-
-111111111111111111111111111111
+<include file="Public:common" />
+<table id="bt_product_grid"></table>
+<html:script pack="BT.PRODUCT" src="/modual/product.js"/>
