--- a/App/Tpl/Gys/getdetail.html
+++ b/App/Tpl/Gys/getdetail.html
@@ -4,9 +4,14 @@
      </head>
      <body>
         <volist name="data" id="vo">
-        姓名：{$vo.uname}<br/>
+        <br>公司名称：{$vo.uname}<br/>
 		<br>账号：{$vo.account}<br/>
 		<br>邮箱：{$vo.mail}<br/>
+		<br>联系人：{$vo.company}<br/>
+		<br>联系电话：{$vo.telephone}<br/>
+		<br>公司地址：{$vo.address}<br/>
+		<br><br/>
+		
 		<img src=__UPLOADS__/{$vo.imgfile1} />
 		<br/>
 		<img src=__UPLOADS__/{$vo.imgfile2} />
